# Mineai-toolkit

./: .gitignore  README.md  bot_manager.py  bot_session.py  control_api.py  main.py  opencode.json  pyproject.toml  server.py
static/: index.html
tools/: interaction.py  lifecycle.py  movement.py  pathfinder.py  sensors.py
